# go-tracker

./: .drone.yml  .env.example  .gitignore  .pre-commit-config.yaml  .prettierrc.json  Dockerfile  Dockerfile.dev  Dockerfile.prod  Taskfile.prod.yml  Taskfile.yml  dev.Dockerfile  docker-compose.prod.yml  docker-compose.yml  gunicorn.conf.py  pyproject.toml
.gitea/workflows/: build-and-push.yaml
api/: go.mod  main.go
api/config/: config.go
api/database/: database.go
api/internal/sql/: group_order.sql.go  models.go  provider.sql.go
api/migrations/: 000001_create_initial_tables.down.sql  000001_create_initial_tables.up.sql
api/sql/: group_order.sql  provider.sql
go_tracker/: app.py  celery.py  celeryconfig.py  config.py  jinja2.py  redis.py  router.py  tasks.py  wsgi.py
go_tracker/blueprints/: __init__.py  group_order.py  provider.py
go_tracker/models/: __init__.py  group_order.py  provider.py
go_tracker/redis/: redis.py
go_tracker/templates/: unpaid_balance.html.j2
proxy/: nginx.conf  nginx.prod.conf
proxy/dev/: nginx.conf
proxy/prod/: nginx.conf
ui/: .prettierrc.cjs  bun.lockb  package.json
ui/src/: App.tsx  index.css  main.tsx
ui/src/components/orderDialog/: OrderDialog.tsx
ui/src/components/orderTable/: OrderTable.tsx  OrderTableToolbar.tsx
ui/src/components/providerDialog/: ProviderDialog.tsx
ui/src/providers/: TrackerProvider.tsx
web/app/: Dockerfile  package.json
web/app/public/: index.html
web/app/src/: App.tsx  index.css  index.tsx
web/app/src/api/: index.ts
web/app/src/contexts/: TrackerContext.tsx
(+12 files in other folders)
