[tool.poetry]
name = "go-tracker"
version = "0.1.0"
description = ""
authors = ["Kenneth V. Domingo <hello@kvdomingo.xyz>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.2"
gunicorn = {extras = ["gevent"], version = "^20.1.0"}
python-dotenv = "^1.0.0"
loguru = "^0.6.0"
redis = "^4.5.4"
redis-om = "^0.1.2"
pytz = "^2023.3"
flask-mail = "^0.9.1"
celery = {extras = ["redis"], version = "^5.2.7"}

[tool.poetry.group.dev.dependencies]
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py310"]

[tool.isort]
profile = "black"
